@@ -1,3 +1,7 @@
+2010-07-14  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (frame-title-format): system-name must in the last.
+
 2010-07-12  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Enable transient-mark-mode.
